<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">DeBairro</string>
    <string name="InserirNome" tools:ignore="MissingTranslation"> Insira seu Nome</string>
    <string name="InserirTelefone">Insira seu numero de telefone</string>
    <string name="InserirData_de_Nacimento">Insira sua data de nacimento</string>
    <string name="InserirEmail">Insira seu email</string>
    <string name="Insira_a_empresa_da_maquina" translatable="false">Insira a empresa da máquina</string>
    <string name="InserirSenha">Insira sua senha</string>
    <string name="Confirmsenha">Confirme sua senha</string>
    <string name="Cadastro">Cadastro</string>
    <string name="Login">Logar</string>
    <string name="OuSeConecteCom">ou se conecte com</string>
    <string name="Nome">Nome</string>
    <string name="Telefone">Telefone</string>
    <string name="DataDeNascimento">Data de Nascimento</string>
    <string-array name="Sexo">
        <item>Masculino</item>
        <item>Feminino</item>
        <item>Outro</item>
    </string-array>
    <string name="Proximo">Proximo</string>
    <string name="Email">Email</string>
    <string name="Senha">Senha</string>
    <string name="EsqueceuSuaSenha">Esqueceu sua senha?</string>
    <string name="ConfirmeSuaSenha">Confirmar senha</string>
    <string name="qual_vai_ser_o_tipo_da_sua_conta">Qual vai ser o tipo da sua conta?</string>
    <string name="j_estamos_quase_terminando">Já estamos quase terminando…</string>
    <string name="Ja_estamos_quase_finalizando">Já estamos quase finalizando…</string>
    <string name="Código">Insira o código enviado pelo administrador</string>
    <string name="Insira_o_código">Insira o código</string>
    <string name="Nao_possui_codigo">Não possui o código</string>
    <string name="NomeEstabelecimento">Nome do estabelecimento</string>
    <string name="TipoEstabelecimento">Tipo de estabelecimento</string>
    <string name="CNPJ">CNPJ</string>
    <string name="Opcional">*Opcional</string>
    <string name="Insira_O_Cliente">Insira o cliente</string>
    <string name="Cliente">Cliente</string>
    <string name="NomeOuCodigoVenda">Insira o nome ou codigo da venda</string>
    <string name="Produto">Produto</string>
    <string name="Forma_de_pagamento">Forma de pagamento</string>
    <string name="Escolher_Forma_de_pagamento">Escolha a forma de pagamento</string>
    <string name="Data">Data</string>
    <string name="InserirData">Insira a data</string>
    <string name="tipo_da_conta">Tipo da conta</string>
    <string name="Insira_o_nome_do_cliente">Insira o nome do cliente</string>
    <string name="Limite">Limite</string>
    <string name="Insira_o_limite_de_compras_em_débito">Insira o limite de compras em débito</string>
    <string name="Insira_o_telefone_do_cliente">Insira o telefone do cliente</string>
    <string name="Insira_o_email_do_cliente">Insira o email do cliente</string>
    <string name="AdicionarMaisInformacoes">Adicionar mais informações</string>
    <string name="Finalizar">Finalizar</string>
    <string name="CPF">CPF</string>
    <string name="Insira_o_CPF_do_cliente">Insira o CPF do cliente</string>
    <string name="CEP">CEP</string>
    <string name="Insira_o_CEP_do_cliente">Insira o CEP do cliente</string>
    <string name="Rua">Rua</string>
    <string name="Insira_a_rua_do_cliente">Insira a rua do cliente</string>
    <string name="Complemento">Complemento</string>
    <string name="Insira_um_complemento">Insira um complemento</string>
    <string name="ex_25_01_2009">ex: 25/01/2009</string>
    <string name="Peso">Peso</string>
    <string name="Insira_o_peso_do_produto">Insira o peso do produto</string>
    <string name="CódigoDeBarras">Código de Barras</string>
    <string name="Insira_o_código_de_barras_do_produto">Insira o código de barras do produto</string>
    <string name="DataDeFabricação">Data de fabricação</string>
    <string name="Insira_a_data_de_fabricação_do_produto">Insira a data de frabricação do produto</string>
    <string name="DataDeValidade">Data de validade</string>
    <string name="Insira_a_data_de_validade_do_produto">Insira a data de validade do produto</string>
    <string name="Lote">Lote</string>
    <string name="Insira_o_lote_do_produto">Insira o lote do produto</string>
    <string name="tipo_de_fatura">Tipo</string>
    <string name="tipo_fatura">Selecione o tipo de fatura</string>
    <string name="descrição">Descrição</string>
    <string name="Inserir_descricão">Insira descrição</string>
    <string name="Data_cobrança">Data cobrança</string>
    <string name="Hoje">Hoje</string>
    <string name="Data_vencimento">Data de vencimento</string>
    <string name="Forma_pagamento">Forma de pagamento</string>
    <string name="parcelas">Parcelas</string>
    <string name="numero_parcelas" translatable="false">1x</string>
    <string-array name="Tipo">
        <item>Administrador</item>
        <item>Funcionário</item>
    </string-array>
    <string-array name="TipoDeEstabelecimento">
        <item>Bar</item>
        <item>Mercado</item>
        <item>Papelaria</item>
        <item>Bazar</item>
        <item>Horti-fruti</item>
    </string-array>
    <string-array name="FormaDePagamento">
        <item>Dinheiro</item>
        <item>Cheque</item>
        <item>Cartão de Crédito</item>
        <item>Cartão de Débito</item>
        <item>Boleto Bancário</item>
    </string-array>
    <string-array name="QuantidadeDeProduto">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="Inserir_imagem">Inserir imagem</string>
    <string name="Inserir_nome_do_produto">Nome</string>
    <string name="Marca">Marca</string>
    <string name="Inserir_marca_do_produto">Marca</string>
    <string name="Quantidade">Quantidade</string>
    <string name="Inserir_quantidade_produto">Quantidade</string>
    <string name="Preço_da_compra">Preço de compra</string>
    <string name="Insira_Preco_Produto">Preço de compra</string>
    <string name="Preço_da_venda">Preço de venda</string>
    <string name="Insira_preco_venda">Preço de venda</string>
    <string name="clientes">Clientes</string>
    <string name="adicionar">Adicionar</string>
    <string name="visualizar">Visualizar</string>
    <string name="estoque">Estoque</string>
    <string name="financas">Finanças</string>
    <string name="despesas">Despesas</string>
    <string name="notifica_es">Notificações</string>
    <string name="vendas">Vendas</string>
    <string name="nova_venda">Nova venda</string>
    <string name="historico">Histórico</string>
    <string name="taxa_da_maquina_credito" translatable="false">Insira a taxa da máquina</string>
    <string name="taxa_da_maquina_debito" translatable="false">Insira a taxa da maquininha</string>
    <string name="aluguel_da_maquina" translatable="false">Insira o aluguel da maquininha (se houver)</string>
    <string name="Finalizar_maquininha" translatable="false">Adicionar</string>
    <string name="Insira_o_seu_nome" translatable="false">Insira o seu nome</string>
    <string name="Insira_o_seu_CPF" translatable="false">Insira o seu CPF</string>
    <string name="Insira_o_seu_telefone" translatable="false">Insira o seu telefone</string>
    <string name="Insira_a_sua_senha" translatable="false">Insira a sua senha</string>
    <string name="Insira_o_seu_email" translatable="false">Insira o seu email</string>
    <string name="Insira_a_sua_data_de_nascimento" translatable="false">Insira a sua data de nascimento</string>
    <string name="InformacoesdoUsuario" translatable="false">Informações do Usuário</string>
    <string name="CancelarAlteracoes" translatable="false">Cancelar as alterações</string>
    <string name="Salvar" translatable="false">Salvar</string>
    <string name="Em_breve" translatable="false">Em breve</string>
    <string name="Tente_novamente_mais_tarde" translatable="false">Tente novamente mais tarde!</string>
    <string name="Realizarvendas" translatable="false">Realizar Vendas</string>
    <string name="Visualizarvendas" translatable="false">Visualizar Vendas</string>
    <string name="Adicionaritensnoestoque" translatable="false">Adicionar itens no estoque</string>
    <string name="Retiraritensdoestoque" translatable="false">Retirar itens do estoque</string>
    <string name="EditarClientes" translatable="false">Editar clientes</string>
    <string name="AcrescentarClientes" translatable="false">Acrescentar clientes</string>
    <string name="VisualizarInformacoesFinanceiras" translatable="false">Visualizar informações financeiras</string>
    <string name="Concluir" translatable="false">Concluir</string>
    <string name="Adicionaremaildofuncionario" translatable="false">Adicione email do funcionario</string>
    <string name="Insirmemail" translatable="false">Insira o email</string>
    <string name="ou" translatable="false">ou</string>
    <string name="GerarCodiFun" translatable="false">Gerar código para funcionario</string>
    <string name="gerar_outro_código" translatable="false">Gerar outro código</string>
    <string name="adicionar_funcionario_dois" translatable="false">#C85DV6</string>
    <string name="sair_maquina" translatable="false">Sair</string>
    <string name="Nenhuma_máquina_de_cartão_cadastrada" translatable="false">Nenhuma máquina de cartão cadastrada</string>
    <string name="Adicionar_máquininha_de_cartão" translatable="false">Adicionar máquininha de cartão</string>
    <string name="Envie_esse_código_para_seu_funcionário_inserir_APP" translatable="false">Envie esse código para seu funcionário inserir no APP</string>
    <string name="código_só_pode_ser_usado_uma_vez" translatable="false">Lembre-se que o código  só pode ser usado uma vez</string>
    <string name="Configuracao" translatable="false">Configuração</string>
    <string name="Maquininhas_de_cartao" translatable="false">Maquininhas de cartão</string>
    <string name="Conta" translatable="false">Conta</string>
    <string name="Funcionarios" translatable="false">Funcionarios</string>
    <string name="Adicionar_Funcionarios" translatable="false">Adicionar Funcionários</string>
    <string name="Idioma" translatable="false">Idioma</string>
    <string name="Moeda" translatable="false">Moeda</string>
    <string name="Avalie_nosso_aplicativo" translatable="false">Avalie nosso aplicativo</string>
    <string name="Suporte" translatable="false">Suporte</string>
    <string name="Creditos" translatable="false">Créditos</string>
    <string name="Sobre_o_aplicativo" translatable="false">Sobre o aplicativo</string>
    <string name="DeBairro" translatable="false">DeBairro®</string>
    <string name="Empresa" translatable="false">Empresa</string>
    <string name="Taxa_para_cartao_de_credito" translatable="false">Taxa para cartão de crédito</string>
    <string name="Taxa_para_cartao_de_debito" translatable="false">Taxa para cartão de débito</string>
    <string name="Aluguel" translatable="false">Aluguel</string>
    <string name="Escolha_uma_opção_de_moeda" translatable="false">Escolha uma opção de moeda</string>
    <string name="EUR" translatable="false">EUR</string>
    <string name="USD" translatable="false">USD</string>
    <string name="BRL" translatable="false">BRL</string>
    <string name="Historia_da_empresa" translatable="false">História da empresa</string>
    <string name="texto1" translatable="false">"O “DeBairro” é um aplicativo que visa ajudar o empreendedor que tem um pequeno comércio e procura uma organização maior. O app usa a aplicação para o seu dispositivo movel, possibilitando o acesso para todos, sem a nessecidade de comprar um computador, podendo assim usar o seu próprio celular. "</string>
    <string name="adicionar_produto" translatable="false">Adicionar produto</string>
</resources>