<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20sp"
    tools:context=".AdicionarClienteActivity">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_alignParentTop="true"
      android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/Nome"
        android:textSize="22sp"
        android:textColor="@color/Cor_principal"
        android:fontFamily="@font/segoe_ui"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edt_InsiraNomeCliente"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Insira_o_nome_do_cliente">

      <com.google.android.material.textfield.TextInputEditText
          android:layout_width="match_parent"
          android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/Limite"
        android:textSize="22sp"
        android:textColor="@color/Cor_principal"
        android:fontFamily="@font/segoe_ui"
        android:layout_marginTop="15sp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edt_InsiraLimiteComprasDebito"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Insira_o_limite_de_compras_em_débito">

      <com.google.android.material.textfield.TextInputEditText
          android:layout_width="match_parent"
          android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/Telefone"
        android:textSize="22sp"
        android:textColor="@color/Cor_principal"
        android:fontFamily="@font/segoe_ui"
        android:layout_marginTop="15sp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edt_InsiraTelefoneCliente"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Insira_o_telefone_do_cliente">

      <com.google.android.material.textfield.TextInputEditText
          android:layout_width="match_parent"
          android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/Email"
        android:textSize="22sp"
        android:textColor="@color/Cor_principal"
        android:fontFamily="@font/segoe_ui"
        android:layout_marginTop="15sp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edt_InsiraEmailCliente"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Insira_o_email_do_cliente">

      <com.google.android.material.textfield.TextInputEditText
          android:layout_width="match_parent"
          android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_ClienteAdicionarMaisInformacoes"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10sp"
        android:fontFamily="@font/segoe_ui_bold"
        android:text="@string/AdicionarMaisInformacoes"
        android:textColor="@color/Cor_principal"
        android:textSize="14sp" />

  </LinearLayout>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_alignParentBottom="true"
      android:layout_marginLeft="30sp"
      android:layout_marginRight="30sp"
      android:gravity="center"
      android:orientation="horizontal">

    <Button
        android:id="@+id/btn_Finalizar"
        android:layout_width="match_parent"
        android:layout_height="70sp"
        android:fontFamily="@font/segoe_ui_bold"
        android:text="@string/Finalizar"
        android:textSize="20sp"
        app:backgroundTint="@color/Cor_principal"
        app:cornerRadius="40sp"  />

  </LinearLayout>
  </RelativeLayout>
