<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdicionarProduto2Activity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:backgroundTint="@color/Cor_principal"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55sp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_Voltaraddproduto"
                android:layout_width="36sp"
                android:layout_height="36sp"
                android:layout_marginLeft="10sp"
                android:layout_marginTop="10sp"
                android:background="@drawable/icone_back"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/adicionar_produto"
                android:fontFamily="@font/segoe_ui_bold"
                android:layout_marginTop="10sp"
                android:textSize="21sp"
                android:layout_marginLeft="20sp"
                android:textColor="@color/white"
                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12sp"
                android:layout_marginLeft="110sp"
                android:background="@drawable/icone_estoque"
                android:backgroundTint="@color/white"/>

        </LinearLayout>

    </com.google.android.material.appbar.AppBarLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:layout_marginTop="55sp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="20sp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Peso"
            android:textSize="22sp"
            android:textColor="@color/Cor_principal"
            android:fontFamily="@font/segoe_ui"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edt_InsiraPesoProduto"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Insira_o_peso_do_produto">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/CódigoDeBarras"
            android:textSize="22sp"
            android:textColor="@color/Cor_principal"
            android:fontFamily="@font/segoe_ui"
            android:layout_marginTop="10sp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edt_InsiraCodigoBarrasProduto"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Insira_o_código_de_barras_do_produto">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/DataDeFabricação"
            android:textSize="22sp"
            android:textColor="@color/Cor_principal"
            android:fontFamily="@font/segoe_ui"
            android:layout_marginTop="10sp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_InsiraDataFabricaçãoProduto"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Insira_a_data_de_fabricação_do_produto"
            app:boxStrokeColor="@color/Cor_principal"
            app:hintTextColor="#51247C">

            <AutoCompleteTextView
                android:id="@+id/act_InsiraDataFabricaçãoProduto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/DataDeValidade"
            android:textSize="22sp"
            android:textColor="@color/Cor_principal"
            android:fontFamily="@font/segoe_ui"
            android:layout_marginTop="1sp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_InsiraDataValidadeProduto"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Insira_a_data_de_validade_do_produto"
            app:boxStrokeColor="@color/Cor_principal"
            app:hintTextColor="#51247C">

            <AutoCompleteTextView
                android:id="@+id/act_InsiraDataValidadeProduto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/Lote"
            android:textSize="22sp"
            android:textColor="@color/Cor_principal"
            android:fontFamily="@font/segoe_ui"
            android:layout_marginTop="1sp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edt_InsiraLoteProduto"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Insira_o_lote_do_produto">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="30sp"
        android:layout_marginRight="30sp"
        android:layout_marginTop="15sp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_FinalizarP"
            android:layout_width="match_parent"
            android:layout_height="70sp"
            android:fontFamily="@font/segoe_ui_bold"
            android:text="@string/Finalizar"
            android:textSize="20sp"
            app:backgroundTint="@color/Cor_principal"
            app:cornerRadius="40sp" />

    </LinearLayout>

    </LinearLayout>

</RelativeLayout>